# node4j

./: .env  .gitignore  LICENSE  README.md  README_PL.md  main.py  pyproject.toml  test.py
node4j/: __init__.py  config.py  db.py  edges.py  manager.py  managers.py  mixins.py  models.py  nodes.py  properties.py  query.py  registry.py
node4j/ext/: apoc.py  gds.py
